// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Tooltip /> > BottomPlacement story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    aria-describedby="_r_6_"
    class="fpo p-1"
  >
    Target Component
  </div>
</div>
`;

exports[`<Tooltip /> > FormattedContent story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    aria-describedby="_r_m_"
    class="fpo p-1"
  >
    Target Component
  </div>
</div>
`;

exports[`<Tooltip /> > Interactive story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <button
    class="fpo p-1"
  >
    Target Component
  </button>
</div>
`;

exports[`<Tooltip /> > InteractiveDisabled story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <span
    data-testid="disabled-child-tooltip-wrapper"
    tabindex="0"
  >
    <div
      class="fpo p-1"
    >
      Target Component
    </div>
  </span>
</div>
`;

exports[`<Tooltip /> > InverseVariant story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    aria-describedby="_r_f_"
    class="fpo p-1"
  >
    Target Component
  </div>
</div>
`;

exports[`<Tooltip /> > LeftPlacement story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    aria-describedby="_r_0_"
    class="fpo p-1"
  >
    Target Component
  </div>
</div>
`;

exports[`<Tooltip /> > LongText story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    aria-describedby="_r_9_"
    class="fpo p-1"
  >
    Target Component
  </div>
</div>
`;

exports[`<Tooltip /> > LongTriggerText story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    aria-describedby="_r_c_"
    class="fpo p-1"
  >
    Longer text to test placement
  </div>
</div>
`;

exports[`<Tooltip /> > TopPlacement story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    aria-describedby="_r_3_"
    class="fpo p-1"
  >
    Target Component
  </div>
</div>
`;
